<resources>
    <string name="app_name">UserExperience</string>
    <string name="action_settings">Settings</string>
    <string name="surf_speed">Surfgeschwindigkeit</string>
    <string name="surf_speed_fast">schnell</string>
    <string name="surf_speed_middle">mittel</string>
    <string name="surf_speed_slow">langsam</string>
    <string name="surf_speed_useless">unbrauchbar</string>
    <string name="why_was_test_canceled">Warum wurde der Test abgebrochen?</string>
    <string name="test_cancelled_no_reason">keine Angabe</string>
    <string name="test_cancelled_boring">keine Lust mehr</string>
    <string name="test_cancelled_useless">unbrauchbar</string>
    <string name="test_cancelled_test_other_option">um andere Option zu testen</string>
    <string name="finish_test">Test abschliessen</string>
    <string name="next">Weiter</string>
    <string name="choose_your_abo">Wählen Sie das gewünschte Abo aus:</string>
    <string name="choose_age_group">Bitte wählen Sie Ihre Altersgruppe aus</string>
    <string name="choose_gender">Bitte wählen Sie Ihr Geschlecht aus</string>
    <string name="male">männlich</string>
    <string name="female">weiblich</string>
    <string name="choose_your_location">Wie schätzen Sie Ihren Wohnort ein</string>
    <string name="city">Stadt</string>
    <string name="agglomeration">Agglo</string>
    <string name="rurally">ländlich</string>
    <string name="choose_your_patience">Wie schätzen Sie Ihre Geduld beim Surfen ein</string>
    <string name="patiently">geduldig</string>
    <string name="impatiently">ungeduldig</string>
    <string name="moderat_patiently">mittel</string>
    <string name="cancel_test">Test beenden</string>
    <string name="shot_db">DB anzeigen</string>
    <string name="export_db">Export DB</string>
    <string name="no_option_choosed_error">Bitte wählen Sie eine Option aus</string>
    <string name="age_categorie_selection_error">Bitte wählen Sie Ihre Alterskategorie aus.</string>
    <string name="gender_selection_error">Bitte wählen Sie Ihr Geschlecht aus.</string>
    <string name="patient__selection_error">Bitte stufen Sie Ihre Geduld ein.</string>
    <string name="location_selection_error">Bitte wählen Sie die auf Ihren Wohnort zutreffende Beschreibung aus.</string>
    <string name="information_text">1. Eingabe der Nutzerdaten. \n2. Eingeben der Testeinstellungen \n3. Auswählen der Homepage und starten des Testes. \n4. Auf der Homepage surfen bis der test beendet (5 min). \n5. Beurteilung zur Qualität des Surfens geben. \n6. Test abschliessen \n7. Neuer Test mit einer anderer Homepage starten.</string>

    <string-array name="userdataInputSpinnerAlter">
        <!-- Wird ein Default Element benötigt? -->
        <item>Bitte Auswählen</item>
        <item>0–15</item>
        <item>16–30</item>
        <item>31–45</item>
        <item>46+</item>
    </string-array>

    <string-array name="testSelection">
        <item>Infinity XS</item>
        <item>Infinity S</item>
        <item>Infinity M</item>
        <item>Infinity L</item>
        <item>Infinity XL</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
</resources>
