<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".ui.FeedbackFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/surf_speed"
        android:id="@+id/txtSurfgeschwindigkeit"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSurfgeschwindigkeit"
        android:layout_alignStart="@+id/txtSurfgeschwindigkeit"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/RGSurfgeschw">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surf_speed_fast"
            android:id="@+id/RBGschnell"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surf_speed_middle"
            android:id="@+id/RBGmittel"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surf_speed_slow"
            android:id="@+id/RBGlangsam"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surf_speed_useless"
            android:id="@+id/RBGunbrauchbar"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/why_was_test_canceled"
        android:id="@+id/txtAbbruchGrund"
        android:layout_below="@+id/RGSurfgeschw"
        android:layout_alignStart="@+id/RGSurfgeschw"
        android:layout_marginTop="30dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAbbruchGrund"
        android:layout_alignStart="@+id/txtSurfgeschwindigkeit"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/RGAbbruchGrund">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cancelled_no_reason"
            android:id="@+id/RBAkeineAngabe"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cancelled_boring"
            android:id="@+id/RBAkeineLust"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cancelled_useless"
            android:id="@+id/RBAunbrauchbar"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cancelled_test_other_option"
            android:id="@+id/RBAweitereTests"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_test"
        android:layout_below="@+id/RGAbbruchGrund"
        android:layout_marginTop="15dp"
        android:id="@+id/feedbackFragmentWeiterBtn"/>


</RelativeLayout>
