<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserdataInputFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_age_group"
            android:id="@+id/userdataInputTxtAlter"
            android:textSize="25sp"
            android:textColor="#000000" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userdataInputAlterSpinner"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_gender"
            android:id="@+id/userdataInputTxtGeschlecht"
            android:textColor="#000000"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/userdataInputRGGeschlecht">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/userdataInputRBtnM"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/userdataInputRBtnW"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />

            <!--<RadioButton-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="keine Angabe"-->
                <!--android:id="@+id/userdataInputRBtnKA"-->
                <!--android:textColor="#000000"-->
                <!--android:textSize="20sp"-->
                <!--android:checked="false" />-->

        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_location"
            android:id="@+id/userdataInputTxtWohnort"
            android:textColor="#000000"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/userdataInputRGWohnort">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/userdataInputRBtnStadt"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agglomeration"
                android:id="@+id/userdataInputRBtnAgg"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rurally"
                android:id="@+id/userdataInputRBtnAusser"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />

        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_patience"
            android:id="@+id/userdataInputTxtGeduld"
            android:textColor="#000000"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/userdataInputRGGeduld">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patiently"
                android:id="@+id/userdataInputRBtnGed"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moderat_patiently"
                android:id="@+id/userdataInputRBtnMitt"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impatiently"
                android:id="@+id/userdataInputRBtnUnged"
                android:textColor="#000000"
                android:textSize="20sp"
                android:checked="false" />
        </RadioGroup>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="25dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/userdataInputBtnWeiter"
            android:textSize="20sp" />


</LinearLayout>
